# ovms-rig

./: .gitignore  ARCHITECTURE.md  DECISIONS.md  README.md  pyproject.toml
config/: local.example.yaml  ovms.example.yaml
src/ovms_rig/: cli.py  command.py  log.py  proc.py  report.py
src/ovms_rig/config/: __init__.py  loader.py  schema.py
src/ovms_rig/env/: __init__.py  bootstrap.py
src/ovms_rig/probes/: live_config.py  model_files.py  model_store.py  models.py  ovms_binary.py  port.py  profiles.py  registry.py  report.py  repository.py  smoke_load.py
src/ovms_rig/stages/: __init__.py  apply.py  fetch.py  profile.py  remove.py  start.py  status.py
src/ovms_rig/stages/activation/: __init__.py  apply.py  cleanup.py  paths.py  pbtxt.py  profile.py  registry.py
src/ovms_rig/stages/apply/: __init__.py  generation.py  marker.py  pbtxt.py  registry.py
src/ovms_rig/stages/start/: __init__.py  command.py  launch.py  precheck.py  signals.py
tests/: test_command.py  test_proc.py  test_smoke.py
tests/config/: test_loader.py  test_schema.py
tests/env/: test_bootstrap.py
tests/probes/: test_aggregator.py  test_live_config.py  test_model_files.py  test_models.py  test_ovms_binary.py  test_profiles.py  test_registry.py  test_report.py  test_smoke_load.py
tests/stages/: test_activation.py  test_apply_integration.py  test_apply_paths.py  test_apply_pbtxt.py  test_apply_rollback.py  test_cleanup.py  test_fetch.py  test_generation.py  test_profile.py  test_registry.py  test_remove.py  test_start.py  test_status.py
