[project]
name = "ovms-rig"
version = "0.1.0"
description = "Declarative loader that brings up OpenVINO Model Server with a validated speculative-decoding setup from a single YAML."
authors = [
    { name = "Rudolf K", email = "korund93@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "protobuf>=5.27",
    "huggingface-hub>=0.24",
    "httpx>=0.27",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ovms-rig = "ovms_rig.cli:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
